add spring boot to airavata-api and streamline service and background process launches